Day 5 : testing Completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.application.name=Ecommerce-Application
 
 # Database Configuration
 
+
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
+
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
